--- a/app/src/main/res/layout/adapter_item.xml
+++ b/app/src/main/res/layout/adapter_item.xml
@@ -17,19 +17,18 @@
     </RelativeLayout>
     <RelativeLayout
         android:layout_toRightOf="@id/book_avatar_layout"
-        android:gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="match_parent">
         <TextView
-            android:text="title"
+            android:layout_centerVertical="true"
             android:id="@+id/book_name"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         <TextView
+            android:layout_marginTop="20dp"
             android:layout_below="@id/book_name"
-            android:text="publisher"
             android:id="@+id/book_publisher"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </RelativeLayout>
 </RelativeLayout>
